# mnist-style

./: .gitignore  LICENSE  README.md  decoder.py  encoder-vis.py  encoder.py  gaussian.py  mnist-aae.py  mnist-sae.py  persistence.py  pyproject.toml  requirements-dev.txt  requirements-vis.txt  requirements.txt  tox.ini  util.py  vis-requirements.txt  vis.ipynb
.github/workflows/: checks.yml  lints.yml
mnist_style/: __init__.py  models.py  persistence.py  trainer.py  util.py
mnist_style/tool/: common.py  encoder_vis.py  train_aae.py  train_sae.py
