[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mnist_style"
authors = [{name = "John C", email = "john.ch.fr@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy~=1.23",
    "Pillow~=9.2",
    "safetensors~=0.3.1",
    "scipy~=1.11",
]
optional-dependencies.cpu = [
    "torch==2.0.1+cpu",
    "torchvision==0.15.2+cpu",
]
optional-dependencies.gpu = [
    "torch~=2.0.1",
    "torchvision~=0.15.2",
]
optional-dependencies.vis = [
    "jupyterlab~=4.0",
    "matplotlib~=3.0",
    "pandas~=2.0",
    "seaborn~=0.12.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.scripts]
encoder-vis = "mnist_style.tool.encoder_vis:main"
train-aae = "mnist_style.tool.train_aae:main"
train-sae = "mnist_style.tool.train_sae:main"

[project.urls]
Home = "https://github.com/johncf/mnist-style"

[tool.mypy]
ignore_missing_imports = true
