[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mnist_style"
authors = [{name = "John C", email = "john.ch.fr@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy~=1.23",
    "Pillow~=10.3",
    "safetensors~=0.4.3",
    "scipy~=1.13",
]
optional-dependencies.cpu = [
    "torch==2.3.0+cpu",
    "torchvision==0.18.0+cpu",
]
optional-dependencies.gpu = [
    "torch~=2.3.0",
    "torchvision~=0.18.0",
]
optional-dependencies.vis = [
    "jupyterlab~=4.0",
    "matplotlib~=3.0",
    "pandas~=2.0",
    "seaborn~=0.13.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.scripts]
encoder-vis = "mnist_style.tool.encoder_vis:main"
train-aae = "mnist_style.tool.train_aae:main"
train-sae = "mnist_style.tool.train_sae:main"

[project.urls]
Home = "https://github.com/johncf/mnist-style"

[tool.mypy]
ignore_missing_imports = true

# flake8 config in tox.ini
